--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,9 @@ body {
 .pokemonInfo{
   padding: 1em;
 }
+.chatInfo{
+  padding: 1em;
+}
 .me-container{
     display: flex;
     flex-direction: row;
@@ -438,6 +441,19 @@ body {
 }
 .pokedex{
     display: flex;
+    flex-direction: row;
+    background-color: var(--box-color);
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 10px 10px 40px black;
+    color: #fff;
+    font-size: 2vw;
+    padding: 3%;
+    justify-content: left;
+}
+.chatroom{
+  display: flex;
     flex-direction: row;
     background-color: var(--box-color);
     margin-top: 2%;
@@ -676,6 +692,17 @@ button:focus {
     display: grid;
     justify-content: left;
   }
+  #me-box .chatroom{
+  background-color: var(--box-color);
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px black;
+    color: #fff;
+    font-size: 6vw;
+    padding: 7%;
+    display: grid;
+    justify-content: left;}
 .link_section{
     padding-top: 1em;
     display: flex;
@@ -698,7 +725,9 @@ button:focus {
 .pokemonInfo{
   padding: 1em;
 }
-
+.chatInfo{
+  padding: 1em;
+}
 
 
 
