--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ body {
     
 
 }
-#me-box .me-container .about-text{
+#me-box .me-container .about-title{
     color: #fff;
     font-size: 2vw;
 }
