--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,12 @@ body {
   padding: 1em;
 }
 .countInfo{
-  padding: 1em;}
+  padding: 1em;
+}
+.mineInfo{
+  padding: 1em;
+}
+
 .me-container{
     display: flex;
     flex-direction: row;
@@ -468,6 +473,19 @@ body {
     justify-content: left;
 }
 .counter{
+  display: flex;
+    flex-direction: row;
+    background-color: var(--box-color);
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 10px 10px 40px black;
+    color: #fff;
+    font-size: 2vw;
+    padding: 3%;
+    justify-content: left;
+}
+.minecraft{
   display: flex;
     flex-direction: row;
     background-color: var(--box-color);
@@ -738,6 +756,18 @@ button:focus {
     display: grid;
     justify-content: left;
   }
+     #me-box .minecraft{
+  background-color: var(--box-color);
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px black;
+    color: #fff;
+    font-size: 6vw;
+    padding: 7%;
+    display: grid;
+    justify-content: left;
+  }
 .link_section{
     padding-top: 1em;
     display: flex;
@@ -764,6 +794,9 @@ button:focus {
   padding: 1em;
 }
 .countInfo{
+  padding: 1em;
+  }
+ .mineInfo{
   padding: 1em;
   }
 }
