--- a/css/style.css
+++ b/css/style.css
@@ -445,8 +445,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 
@@ -459,8 +459,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 .goat{
@@ -472,8 +472,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 
@@ -486,8 +486,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 .pokedex{
@@ -499,8 +499,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 1.5vw; */
-    padding: 2%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 .chatroom{
@@ -512,8 +512,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 .counter{
@@ -525,8 +525,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 .minecraft{
@@ -538,8 +538,8 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 2vw; */
-    padding: 3%;
+    font-size: 1vw;
+    padding: 1.5%;
     justify-content: left;
 }
 .showcase .showcase-inner .me-container2 {
