--- a/css/style.css
+++ b/css/style.css
@@ -898,8 +898,8 @@ button {
   background: var(--primary-color);
   border-radius: 0px;
   color: #fff;
-  font-size: 2vw;
-/*   padding: 10px; */
+  font-size: 1.3vw;
+  padding: 10px;
   margin: 0;
   min-width: 0.5em;
   max-width: 13vw;
