--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,90 @@ body {
 }
 }
 @media only screen and (max-width: 700px){
+  
+  
+  #myImg {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+
+		#myImg2 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg3 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg4 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg5 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg6 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg7 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg8 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		#myImg9 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+  
+  
+  
+  
+  
+  
+  
+  
+  
 .showcase .showcase-inner .me-container2{
     background-color: var(--box-color);
     margin-top: 5%;
@@ -693,11 +777,11 @@ button {
   background: var(--primary-color);
   border-radius: 0px;
   color: #fff;
-  font-size: 2vw;
-/*   padding: 10px; */
+  font-size: 1.3vw;
+  padding: 3px;
   margin: 0;
   min-width: 0.5vw;
-  max-width: 12vw;
+  max-width: 16vw;
 }
 
 button:active {
