--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ body {
 			cursor: pointer;
 			transition: 0.3s;
 			padding: .25em;
-	  height: fit-content;
+	  		height: initial;
 			max-width: 100%;
 			max-height: 100%;
 		}
