--- a/css/style.css
+++ b/css/style.css
@@ -866,6 +866,7 @@ button:focus {
 /*     font-size: 6vw;
     padding: 7%; */
     display: block;
+    font-size: medium;
     justify-content: left;
   }
   #me-box .chatroom{
