--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ body {
 			cursor: pointer;
 			transition: 0.3s;
 			padding: .25em;
-	  		height: initial;
+/* 	  		height: initial; */
 			max-width: 100%;
 			max-height: 100%;
 		}
@@ -738,9 +738,7 @@ body {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
-	font-size: medium;
+    font-size: medium;
     display:grid;
     justify-content: left;
 }
@@ -800,11 +798,8 @@ button:focus {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
-	font-size: medium;
-
+    font-size: medium;
     justify-content: left;
     
 }
@@ -815,10 +810,7 @@ button:focus {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
-	font-size: medium;
-
+    font-size: medium;
     display: block;
     justify-content: left;
     
@@ -830,11 +822,8 @@ button:focus {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
-	font-size: medium;
-
+    font-size: medium;
     justify-content: left;
     
 }
@@ -848,11 +837,8 @@ button:focus {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
-	 font-size: medium;
-
+    font-size: medium;
     justify-content: left;
     
   }
@@ -863,8 +849,6 @@ button:focus {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
     font-size: medium;
     justify-content: left;
@@ -876,44 +860,36 @@ button:focus {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
-	  font-size: medium;
-
+    font-size: medium;
     justify-content: left;
   }
   
   
   
-    #me-box .counter{
-  background-color: var(--box-color);
+  #me-box .counter{
+    background-color: var(--box-color);
     margin-top: 2%;
     margin-left: 5%;
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
-	    font-size: medium;
-
+    font-size: medium;
     justify-content: left;
   }
-     #me-box .minecraft{
-  background-color: var(--box-color);
+  #me-box .minecraft{
+    background-color: var(--box-color);
     margin-top: 2%;
     margin-left: 5%;
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-/*     font-size: 6vw;
-    padding: 7%; */
     display: block;
-	     font-size: medium;
-
+    font-size: medium;
     justify-content: left;
   }
+	
 .link_section{
     padding-top: 1em;
     display: flex;
