--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ body {
     margin-right: 10%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-    font-size: 1.4vw;
+    font-size: 25px;
     padding: 1.5%;
     justify-content: left;
 }
