--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,7 @@ body {
 			cursor: pointer;
 			transition: 0.3s;
 			padding: .25em;
-/* 	  		height: initial; */
+	  		height: initial;
 			max-width: 100%;
 			max-height: 100%;
 		}
@@ -738,7 +738,7 @@ body {
     margin-right: 5%;
     box-shadow: 10px 10px 40px black;
     color: #fff;
-    font-size: medium;
+    font-size:1rem;
     display:grid;
     justify-content: left;
 }
