--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+h1{
+	font-size: 1.6rem;
+}
 body {
   font-family: 'Caveat', cursive;
   line-height: 1.4;
