--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,7 @@ body {
     top: 65vh;
     display: inherit;
     flex-direction: row;
-    justify-content:left;
+    justify-content:center;
     
 }
 
