--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,9 @@ body {
 .playerInfo{
   padding: 1em;
 }
+.JazzyInfo{
+  padding: 1em;
+}
 
 .me-container{
     display: flex;
@@ -573,6 +576,19 @@ body {
 }
 .mp3Player{
 	display: flex;
+    flex-direction: row;
+    background-color: var(--box-color);
+    margin-top: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 10px 10px 40px black;
+    color: #fff;
+    font-size: 1.3rem;
+    padding: 1.5%;
+    justify-content: left;
+}
+.jazzyProj{
+  display: flex;
     flex-direction: row;
     background-color: var(--box-color);
     margin-top: 2%;
@@ -747,6 +763,14 @@ body {
 			max-height: 100%;
 		}
 		#myImg11 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+			padding: .25em;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	#myImg12{
 			border-radius: 5px;
 			cursor: pointer;
 			transition: 0.3s;
@@ -970,6 +994,17 @@ button:focus {
     font-size: 1.3rem;
     justify-content: left;
 	}
+ #me-box .jazzyProj{
+    background-color: var(--box-color);
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px black;
+    color: #fff;
+    display: block;
+    font-size: 1.3rem;
+    justify-content: left;
+  }
 	
 .link_section{
     padding-top: 1em;
@@ -1003,6 +1038,9 @@ button:focus {
   padding: 1em;
 }
 .playerInfo{
+  padding: 1em;
+}
+.JazzyInfo{
   padding: 1em;
 }
 }
